配置百度翻译API

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -19,3 +19,8 @@ PORT=3001
 
 # 跨域配置
 CORS_ORIGIN=http://localhost:3000
+
+# 百度翻译API配置
+# 请前往 https://fanyi-api.baidu.com/ 申请
+BAIDU_TRANSLATE_APP_ID=your_app_id
+BAIDU_TRANSLATE_SECRET_KEY=your_secret_key
