--- a/apps/h5-client/package.json
+++ b/apps/h5-client/package.json
@@ -8,24 +8,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
     "axios": "^1.6.5",
-    "vant": "^4.8.11",
-    "vue-i18n": "^9.9.0",
+    "dayjs": "^1.11.10",
     "html2canvas": "^1.4.1",
+    "pinia": "^2.1.7",
     "qrcode": "^1.5.3",
     "socket.io-client": "^4.6.1",
-    "dayjs": "^1.11.10"
+    "vant": "^4.8.11",
+    "vue": "^3.4.15",
+    "vue-i18n": "^9.9.0",
+    "vue-router": "^4.2.5",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
+    "sass": "^1.70.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-vue-components": "^0.26.0",
-    "sass": "^1.70.0"
+    "vite": "^5.0.11",
+    "vue-tsc": "^1.8.27"
   }
 }
