--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.3.0",
@@ -23,12 +24,16 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.10",
+    "escpos": "^3.0.0-alpha.6",
     "exceljs": "^4.4.0",
     "mysql2": "^3.7.0",
+    "node-printer": "^1.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "puppeteer-core": "^24.36.1",
     "redis": "^4.6.12",
     "socket.io": "^4.6.0",
+    "socket.io-client": "^4.8.3",
     "typeorm": "^0.3.19",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
